# watertap

./: .addheader.yml  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  COPYRIGHT.md  F400_PFOA.csv  F400_PFOA_filtered.csv  LICENSE.md  README.md  SoC_modified.ipynb  Validation_pressure_drop.py  basic_test.py  codecov.yml  diagnose_dof.py  environment-dev.yml  environment.locked.yml  environment.yml  header_text.txt  interpolated_genericnp_sensitivity_1.csv  model_results.p  pfas_regression_results.csv  pressure_result.csv  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sensitivity_1.csv  setup.py  sim_ED0D_pressure_drop.py  sim_seawater.py  solution.pickle  test_parameter_variations.py
.binder/: README.txt  apt.txt  postBuild
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: checks.yml  linkcheck.yml  mpi4py-test.yml  python-package.yml
assignments/: file_directory.txt  sim_simple_ED_1D.py
docs/: .htmltest.yml  0D_nanofiltration.rst  Makefile  apidoc.bat  apidoc.sh  conf.py  copyright.rst  electrolyte_database.rst  getting_started.rst  index.rst  license.rst  make.bat  ui_install.rst
docs/_static/: custom.css
docs/apidoc/: modules.rst  proteuslib.edb.rst  proteuslib.flowsheets.RO_with_energy_recovery.rst  proteuslib.flowsheets.rst  proteuslib.property_models.rst  proteuslib.rst  proteuslib.unit_models.rst  watertap.core.plugins.rst  watertap.core.rst  watertap.core.util.rst  watertap.costing.rst  watertap.data.rst  watertap.data.techno_economic.rst  watertap.edb.rst  watertap.examples.case_studies.rst  watertap.examples.chemistry.rst  watertap.examples.edb.rst  watertap.examples.flowsheets.RO_with_energy_recovery.rst  watertap.examples.flowsheets.case_studies.municipal_treatment.rst  watertap.examples.flowsheets.case_studies.rst  watertap.examples.flowsheets.case_studies.seawater_RO_desalination.rst  watertap.examples.flowsheets.case_studies.wastewater_resource_recovery.rst  watertap.examples.flowsheets.full_treatment_train.analysis.rst  watertap.examples.flowsheets.full_treatment_train.flowsheet_components.chemistry.rst  watertap.examples.flowsheets.full_treatment_train.flowsheet_components.examples.rst  watertap.examples.flowsheets.full_treatment_train.flowsheet_components.rst  watertap.examples.flowsheets.full_treatment_train.model_components.eNRTL.rst  watertap.examples.flowsheets.full_treatment_train.model_components.rst  watertap.examples.flowsheets.full_treatment_train.rst  watertap.examples.flowsheets.lsrro.rst  watertap.examples.flowsheets.rst  watertap.examples.rst  watertap.flowsheets.rst  watertap.property_models.activated_sludge.rst  watertap.property_models.rst  watertap.rst  watertap.tools.rst  watertap.ui.rst  watertap.unit_models.mvc.components.rst  watertap.unit_models.mvc.rst  (+2 more)
docs/background/: index.rst  what_is_proteuslib.rst  what_is_watertap.rst  why_use_edb.rst
docs/edb/: concepts.md  concepts.rst  examples.rst  index.rst  (+2 more)
my-sandbox/: sim_dspmde_NF_model.py  sim_dspmde_NF_model0_wo_kf_eq.py  sim_dspmde_NF_model1_w_kf_eq.py  sim_dspmde_seawater_prop_model.py
project_template/: cookiecutter.json
proteuslib/: .gitignore  conftest.py
tutorials/: 00-index.ipynb  BSM2.ipynb  BSM2_detailed.ipynb  README.md  aeesp_workshop_tutorial.ipynb  breakthrough_curve_parmest_demo.ipynb  conftest.py  creating_a_simple_property_model.ipynb  creating_a_simple_unit_model.ipynb  demo_properties.py  generate_pyomo_example_plot.py  incorporating_oli_calculations.ipynb  incorporating_oli_calculations.py  introduction.ipynb  introduction_abridged.ipynb  ix_sweep2.csv  lsrro.ipynb  managing_oli_credentials.ipynb  model_integration_workflow.ipynb  modeling_multicomponent_rejection.ipynb  nawi_spring_meeting2023.ipynb  oli_calculations.ipynb  parameter_sweep_demo.ipynb  reverse_osmosis_0D.ipynb  unit_model_customization_example.ipynb  using_a_simple_property_model.ipynb  using_a_simple_unit_model.ipynb  using_component_helper_functions.ipynb  using_oli_flash_calculations.py  workshop_flowsheet.py
watertap/: __init__.py  conftest.py  custom_exceptions.py  watertap_cli.py
(+2861 files in other folders)
